# link-shortener-rs

./: Cargo.toml
html/: index.html  script.js  style.css
src/: main.rs
