[package]
name = "link-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.0.0-alpha.3" 
tokio-postgres = "0.5.0-alpha.2"
deadpool-postgres = "0.2.3"
serde = "1.0.136"
rand = "0.8.4"
dotenv = "0.15.0"